# openapi-php

./: .gitignore  BENCHMARKS.md  Cargo.toml  LICENSE  README.md  README_ja.md  lefthook.yml  mise.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.lefthook/: check-fixtures.sh  validate-commit-msg.sh
benches/: codegen.rs
examples/: .gitattributes  README.md
examples/discriminated-union/: openapi.yaml
examples/discriminated-union/output-laravel/Models/: Circle.php  Image.php  Rectangle.php  Shape.php
examples/petstore/: openapi.yaml
examples/petstore/output-split/Models/: Pet.php  (+4 more)
scripts/: bench-vs-competitors.sh  composer.json  generate-bench-spec.py  phpstan-check.sh  phpstan.neon
src/: config.rs  lib.rs  main.rs  php_utils.rs
src/cli/: mod.rs
src/generator/: backend.rs  mod.rs
src/generator/php/: client.rs  context.rs  helpers.rs  laravel.rs  mod.rs  models.rs  plain.rs  templates.rs
src/ir/: endpoint.rs  mod.rs  schema.rs
src/parser/: error.rs  mod.rs  types.rs
src/parser/raw/: types.rs
src/parser/resolve/: mod.rs
tests/: codegen_test.rs  config_test.rs  error_test.rs  laravel_test.rs  nullable_union_test.rs  oas31_test.rs  parse_test.rs  union_test.rs  validate_test.rs
tests/fixtures/: bad_yaml.yaml  bearer_auth.yaml  bool_query_param.yaml  discriminated_union.yaml  form_urlencoded.yaml  global_security.yaml  injection_spec.yaml  large_api.yaml  multi_resource.yaml  nullable_ref_union.yaml  oas31_comprehensive.yaml  openapi31_nullable.yaml  petstore.yaml  primitive_ref.yaml  simple.yaml
tests/snapshots/: .gitkeep
(+81 files in other folders)
