[package]
name = "openapi-php"
version = "0.1.0"
edition = "2024"
description = "OpenAPI 3.x → PHP code generator (written in Rust)"
license = "MIT"

[[bin]]
name = "openapi-php"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Template engine (Phase 5)
minijinja = "2"

[dev-dependencies]
pretty_assertions = "1"
